--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -185,7 +185,7 @@
       </div>
     </div>
     <div class="card" style="border: none;">
-      <img class="card-img-top rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5635AQFPhghoKbZHEA/profile-framedphoto-shrink_800_800/0/1618263546208?e=1619564400&v=beta&t=fr8RBQwM_itC2-E6zEdXfXhrnpZCGefO_mnn5VSA8wE" alt="Card image cap">
+      <img class="card-img-top rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5103AQFeZkkVW6AK6g/profile-displayphoto-shrink_800_800/0/1523440598371?e=1625097600&v=beta&t=TddM2v5OjpG0pSnJjwzeaE33NqBQ0NSsS1tFa6iqEgc">
       <div class="card-body">
         <h5 class="card-title">Nilakanth Bajaniya</h5>
         <a class="card-text" href="https://www.linkedin.com/in/nilkanth-bajaniya/">Full Stack Developer</a>
