--- a/mycapstone/templates/file.html
+++ b/mycapstone/templates/file.html
@@ -31,14 +31,24 @@
   <h3>Download Template to get Mortality</h3><br>
   <a href={{url}}> <button type="button" class="btn btn-success" href={{url}}>Sample Template</button> </a>
   <br>
-  <br>
-  <div class="container text-center">
-    <form method="POST" action="/uplaod_csv" enctype="multipart/form-data">
-      {% csrf_token %}
-      <h3>Upload: </h3><input name="csv_file" type="file"/>
-      <input type="submit" class="btn btn-success text-center" value="Submit">
-    </form>
-  </div>  
+  <br> 
+</div>
+
+<div class="container text-center">
+  <form method="POST" action="/uplaod_csv" enctype="multipart/form-data">
+    {% csrf_token %}
+    <h3>Upload: </h3>
+    <input class="center-block btn btn-default" name="csv_file" type="file"/> <br/> 
+    <input type="submit" class="btn btn-success text-center" value="Submit">
+  </form>
+</div> 
+
+
+<div class="container text-center">
+  <h2> Download our dataset.</h2>
+  
+  <a href='https://drive.google.com/file/d/1xfxb_cD6OkaSUMgkRCTawFkFruAdkgsK/view?usp=sharing' target="_blank" class="btn btn-primary"> Download Dataset Description </a> 
+  <a href="https://drive.google.com/file/d/1DLaZB-yxqc6FZioFDJKBKHMhUn6mlBJ3/view?usp=sharing" target="_blank" class="btn btn-primary"> Download Dataset </a>
 </div>
 
 </body>
