canada map changes

--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -113,7 +113,7 @@
           <div class="card border-info mb-3" >
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="https://www.international.gc.ca/education/assets/images/ies-sei/19-137_Graph3_EN.png"
+                <img src="https://www.craigmarlatt.com/canada/images/images&downloads/map_pol.jpg"
                   class="card-img-top"
                   alt="..."
                 />
