--- a/mycapstone/templates/predict.html
+++ b/mycapstone/templates/predict.html
@@ -97,7 +97,8 @@
       <h1>Wanna know something Interesting?</h1>
       <small>Enter your personal data</small>
       <form>
-        <h4>" If I am a &nbsp; <select name="gender" id="gender">
+        <h4>" If I am a &nbsp; 
+          <select name="gender" id="gender">
             <option value="1">Male</option>
             <option value="2">Female</option>
             <option value="9">Do not want share</option>
