--- a/mycapstone/templates/csv_upload_review.html
+++ b/mycapstone/templates/csv_upload_review.html
@@ -9,8 +9,19 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+        
     </head>
     <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container justify-content-start">
+            <a class="navbar-brand" href="./">Mortality</a>
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a  class="nav-link" href="./">Home</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
         
     <canvas id="regionPie" style="float: left; width:100%; max-width: 720px; margin-top: 60px;"></canvas>
     <canvas id="genderBar" style="float: left; width:100%; max-width: 720px; margin-top: 60px;"></canvas>    
