--- a/mycapstone/templates/upload.html
+++ b/mycapstone/templates/upload.html
@@ -11,7 +11,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     </head>
     <body>
-        
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container justify-content-start">
+            <a class="navbar-brand" href="./">Mortality</a>
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a  class="nav-link" href="./">Home</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
     <canvas id="regionPie" style="float: left; width:100%; max-width: 720px; margin-top: 60px;"></canvas>
     <canvas id="genderBar" style="float: left; width:100%; max-width: 720px; margin-top: 60px;"></canvas>    
     <canvas id="ageBar" style="float: left; width:100%; max-width: 720px; margin-top: 60px;"></canvas>
