--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -194,7 +194,7 @@
       <div class="card">
         <img class="card-img-top rounded-circle"
           src="https://media-exp1.licdn.com/dms/image/C4D03AQGlN0DpaRrhLA/profile-displayphoto-shrink_800_800/0/1611096723940?e=1625097600&v=beta&t=c_YT5gHlcacT_8GFFF90F9-bBOz0BYHFzZ168h-zyBI"
-          alt="Card image cap">
+          alt="Bhavika Patel">
         <div class="card-body">
           <h5 class="card-title">Bhavika Patel</h5>
           <a class="card-text" href="https://www.linkedin.com/in/bhavika-patel85/">Web Designer</a>
@@ -203,7 +203,7 @@
       </div>
       <div class="card" style="border: none;">
         <img class="card-img-top rounded-circle"
-          src="https://media-exp1.licdn.com/dms/image/C5103AQFeZkkVW6AK6g/profile-displayphoto-shrink_800_800/0/1523440598371?e=1625097600&v=beta&t=TddM2v5OjpG0pSnJjwzeaE33NqBQ0NSsS1tFa6iqEgc">
+          src="https://media-exp1.licdn.com/dms/image/C5103AQFeZkkVW6AK6g/profile-displayphoto-shrink_800_800/0/1523440598371?e=1625097600&v=beta&t=TddM2v5OjpG0pSnJjwzeaE33NqBQ0NSsS1tFa6iqEgc" alt="Nilakanth Bajaniya">
         <div class="card-body">
           <h5 class="card-title">Nilakanth Bajaniya</h5>
           <a class="card-text" href="https://www.linkedin.com/in/nilkanth-bajaniya/">Full Stack Developer</a>
@@ -213,10 +213,10 @@
       <div class="card" style="border: none;">
         <img class="card-img-top rounded-circle"
           src="https://media-exp1.licdn.com/dms/image/C5603AQF2YoblRm11hQ/profile-displayphoto-shrink_800_800/0/1616445974888?e=1625097600&v=beta&t=qNZmAu-GR4g-bWlBM2r0oQpoRUirDRQtzG4l88NtBAE"
-          alt="Card image cap">
+          alt="Bhavya Patel">
         <div class="card-body">
           <h5 class="card-title">Bhavya Patel</h5>
-          <a class="card-text" href="https://www.linkedin.com/in/bhavya-patel-2501/">Web Developer</a>
+          <a class="card-text" href="https://www.linkedin.com/in/bhavya-patel-2501/">Software Developer</a>
           <a class="card-text" href="mailto:patelbhavya.cs@gmail.com">patelbhavya.cs@gmail.com</a>
         </div>
       </div>
@@ -236,13 +236,13 @@
     </div>
     <form>
       <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+      <input type="text" Label="FirstName" id="fname" name="firstname" placeholder="Your name..">
 
       <label for="lname">Last Name</label>
-      <input type="text" id="email" name="email" placeholder="Your Email address..">
+      <input type="text" Label="LastName" id="email" name="email" placeholder="Your Email address..">
 
       <label for="subject">Comments</label>
-      <textarea id="subject" name="subject" placeholder="Write Comments on the project here..."
+      <textarea id="subject" Label="Subject" name="subject" placeholder="Write Comments on the project here..."
         style="height:200px"></textarea>
 
       <input type="submit" class="btn btn-success text-center" value="Submit">
