Lable chages, csv read optimization, readme.md changes

--- a/mycapstone/templates/predict.html
+++ b/mycapstone/templates/predict.html
@@ -128,13 +128,12 @@
             <option value="9">Not Sure</option>
           </select>. &nbsp; Also, I reside in the region of
           <select name="region" id="region">
-            <option value="1"> &nbsp; Atlantic (New Brunswick, Nova Scotia, Prince Edward Island, Newfoundland and
-              Labrador)
+            <option value="1"> &nbsp; Atlantic (NB, NS, PE, NL)
             </option>
             <option value="2">Quebec</option>
             <option value="3">Ontario and Nunavut</option>
-            <option value="4">Prairies (Alberta, Saskatchewan, and Manitoba) and the Northwest Territories</option>
-            <option value="5">British Columbia and Yukon</option>
+            <option value="4">Prairies (AB, Sk, and MB)</option>
+            <option value="5">BC and Yukon</option>
             <option value="0">Not Sure</option>
           </select> &nbsp; and I am a
           <select name="occupation" id="occupation">
